[go.microservice] Fix go-swagger
