# main.go
@@ -31,24 +31,24 @@ func main() {
 
 	serveMux := mux.NewRouter()
 	getRouter := serveMux.Methods("GET").Subrouter()
-	getRouter.HandleFunc("/", productsHandler.GetProducts)
+	getRouter.HandleFunc("/products", productsHandler.GetProducts)
 
 	putRouter := serveMux.Methods("PUT").Subrouter()
 	putRouter.Use(productsHandler.MiddlewareValidateProduct)
-	putRouter.HandleFunc("/{id:[0-9]+}", productsHandler.UpdateProduct)
+	putRouter.HandleFunc("/products/{id:[0-9]+}", productsHandler.UpdateProduct)
 
 	postRouter := serveMux.Methods("POST").Subrouter()
 	postRouter.Use(productsHandler.MiddlewareValidateProduct)
-	postRouter.HandleFunc("/", productsHandler.AddProduct)
+	postRouter.HandleFunc("/products", productsHandler.AddProduct)
 
 	deleteRouter := serveMux.Methods("DELETE").Subrouter()
-	deleteRouter.HandleFunc("/{id:[0-9]+}", productsHandler.DeleteProduct)
+	deleteRouter.HandleFunc("/product/{id:[0-9]+}", productsHandler.DeleteProduct)
 
 	ops := middleware.RedocOpts{SpecURL: "/swagger.yaml"}
 
-	getdocHandler := middleware.Redoc(ops, nil)
+	redocGetDocHandler := middleware.Redoc(ops, nil)
 
-	getRouter.Handle("/docs", getdocHandler)
+	getRouter.Handle("/docs", redocGetDocHandler)
 	getRouter.Handle("/swagger.yaml", http.FileServer(http.Dir("./")))
 
 	bindAddress := getEnv("BIND_ADDRESS", ":9090")
